2014-02-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2253.c:
	  Fix and improve division and multiplication, includes fix for #2253.

2014-02-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2252.c:
	  Fix bug #2252.
	* src/SDCCpeeph.c:
	  Fix notVolatile() for stm8.
	* src/stm8/peeph.def:
	  Add some peephole rules to eliminate unnecessary loads.

2014-02-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c
	  Slightly more efficient complement.

2014-02-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c
	  Fix jump on condition that is stored in register y in reverse order (bug #2251).

2014-02-02 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asstm8/stm8mch.c,
	  src/stm8/gen.c:
	  Apply patch #215 by Ben Shi to fix bug #2227.
	* src/port.h,
	  sdas/asxxsrc/asmain.c:
	  Fix >= comparisons.

2014-01-12 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asstm8/stm8pst.c,
	  src/stm8/main.c:
	  Enable .optsdcc for stm8.
	  
2014-01-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (ast_print): fixed GOTO, warn for undecorated

2014-01-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_gptrget.c,
	* device/lib/_gptrput.c,
	* src/ds390/main.c,
	* src/ds390/gen.c: renamed _ap to acc1, fixed bug 1896
	* support/regression/tests/gcc-torture-execute-loop-5.c: enabled for ds390
	* sdas/asxxsrc/aslex.c (nxtline): fixed bug 2166 and 2206
	* src/SDCClospre.hpp,
	* src/SDCCralloc.hpp: fixed MSVC warnings

2014-01-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: applied patch 62
	* sdas/linksrc/lkarea.c (lnksect): fixed bug 1805
	* sdas/linksrc/lkmain.c (Areas51): use only for mcs51
	* src/hc08/main.c: mark XINIT as (CODE)

2013-12-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/ralloc2.cc,
	  src/stm8/gen.c,
	  src/stm8/ralloc2.cc:
	  Remove some GETHBIT leftovers.
